minor fixing indicators at other projects slider on mobile

--- a/src/assets/sass/containers/projects/_projects.scss
+++ b/src/assets/sass/containers/projects/_projects.scss
@@ -101,3 +101,15 @@
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+    .prjects-section {
+        .side-projects {
+           .section-other-projects{
+                .indicators {
+                    display: none;
+                }
+           }
+        }
+    }
+}
